--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,15 @@
         <div class="container main-nav">
             <a href="./" class="logo link">Web<span class="logo-studio">Studio</span></a>
         <nav>
-            <ul class="site-nav list">
-                <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                <li class="item"><a href="./portfolio.html" class="current link">Портфолио</a></li>
-                <li class="item"><a href="" class="link">Контакты</a></li>
+            <ul class="main-nav-list list">
+                <li class="main-nav-list-item"><a href="./index.html" class="link">Студия</a></li>
+                <li class="main-nav-list-item"><a href="./portfolio.html" class="current link">Портфолио</a></li>
+                <li class="main-nav-list-item"><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
     
-        <ul class="contacts list">
-            <li class="items">
+        <ul class="header-contacts list">
+            <li class="header-contacts-item">
                 <a href="mailto:info@devstudio.com" class="icon link">
                     <svg width="16px" height="16px" class="icon-picture">
                         <use href="./images/icons.svg#envelope">
@@ -34,7 +34,7 @@
                     info@devstudio.com
                 </a>
             </li>
-            <li class="items">
+            <li class="header-contacts-item">
                 <a href="tel:+380961111111" class="icon link">
                     <svg width="16px" height="16px" class="icon-picture">
                         <use href="./images/icons.svg#phone">
@@ -53,19 +53,19 @@
             <div class="container">
             <h1 class="visually-hidden">Портфолио</h1>
         <!--Фильтр-->
-            <ul class="btn list">
-                <li class="item"><button type="button" class="buttons btn-active">Все</button></li>
-                <li class="item"><button type="button" class="buttons">Веб-сайты</button></li>
-                <li class="item"><button type="button" class="buttons">Приложения</button></li>
-                <li class="item"><button type="button" class="buttons">Дизайн</button></li>
-                <li class="item"><button type="button" class="buttons">Маркетинг</button></li>
+            <ul class="filter list">
+                <li class="filter-item"><button type="button" class="filter-btn btn-active">Все</button></li>
+                <li class="filter-item"><button type="button" class="filter-btn">Веб-сайты</button></li>
+                <li class="filter-item"><button type="button" class="filter-btn">Приложения</button></li>
+                <li class="filter-item"><button type="button" class="filter-btn">Дизайн</button></li>
+                <li class="filter-item"><button type="button" class="filter-btn">Маркетинг</button></li>
             </ul>
 
             <!--Список проектов-->
             <ul class="projects list">
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -73,15 +73,15 @@
                             </div>
                     <img src="./images/img1.jpg" alt="ноутбук с изображениями" width="370">
                             </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Технокряк</h2>
-                    <p class="list-items">Веб-сайт</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Технокряк</h2>
+                    <p class="projects-card-bottom-unit">Веб-сайт</p>
                     </div>
                     </a>     
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -89,15 +89,15 @@
                             </div>
                     <img src="./images/img2.jpg" alt="баскетболисты" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                    <p class="list-items">Дизайн</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                    <p class="projects-card-bottom-unit">Дизайн</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -105,15 +105,15 @@
                             </div>
                     <img src="./images/img3.jpg" alt="рыба с надписью" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Ресторан <span lang="en">Seafood</span></h2>
-                    <p class="list-items">Приложение</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Ресторан <span lang="en">Seafood</span></h2>
+                    <p class="projects-card-bottom-unit">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -121,15 +121,15 @@
                             </div>
                     <img src="./images/img4.jpg" alt="наушники" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Проект <span lang="en">Prime</span></h2>
-                    <p class="list-items">Маркетинг</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Проект <span lang="en">Prime</span></h2>
+                    <p class="projects-card-bottom-unit">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -137,15 +137,15 @@
                             </div>
                     <img src="./images/img5.jpg" alt="коробки" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Проект <span lang="en">Boxes</span></h2>
-                    <p class="list-items">Приложение</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Проект <span lang="en">Boxes</span></h2>
+                    <p class="projects-card-bottom-unit">Приложение</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -153,15 +153,15 @@
                             </div>
                     <img src="./images/img6.jpg" alt="монитор" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 lang="en" class="list-projects">Inspiration has no Borders</h2>
-                    <p class="list-items">Веб-сайт</p>
+                    <div class="projects-card-bottom">
+                    <h2 lang="en" class="projects-card-bottom-title">Inspiration has no Borders</h2>
+                    <p class="projects-card-bottom-unit">Веб-сайт</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -169,15 +169,15 @@
                             </div>
                     <img src="./images/img7.jpg" alt="книга" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Издание <span lang="en">Limited Edition</span></h2>
-                    <p class="list-items">Дизайн</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Издание <span lang="en">Limited Edition</span></h2>
+                    <p class="projects-card-bottom-unit">Дизайн</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -185,15 +185,15 @@
                             </div>
                     <img src="./images/img8.jpg" alt="брелок" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 class="list-projects">Проект <span lang="en">LAB</span></h2>
-                    <p class="list-items">Маркетинг</p>
+                    <div class="projects-card-bottom">
+                    <h2 class="projects-card-bottom-title">Проект <span lang="en">LAB</span></h2>
+                    <p class="projects-card-bottom-unit">Маркетинг</p>
                     </div>
                     </a>
                 </li>
-                <li class="item">
-                    <a href="" class="projects-item link">
-                        <div class="picture">
+                <li class="projects-card">
+                    <a href="" class="projects-link link">
+                        <div class="projects-picture">
                             <div class="overlay">
                                 <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                     платформу для цифрового
@@ -201,9 +201,9 @@
                             </div>
                     <img src="./images/img9.jpg" alt="ноутбук в работе" width="370">
                     </div>
-                    <div class="item-line">
-                    <h2 lang="en" class="list-projects">Growing Business</h2>
-                    <p class="list-items">Приложение</p>
+                    <div class="projects-card-bottom">
+                    <h2 lang="en" class="projects-card-bottom-title">Growing Business</h2>
+                    <p class="projects-card-bottom-unit">Приложение</p>
                     </div>
                     </a>
                 </li>
@@ -217,55 +217,55 @@
         <div class="container container-bottom">
             <div class="bottom-left">
                 <a href="./" class="bottom-link logo link">Web<span class="logo-studio-bottom">Studio</span></a>
-                <address class="bottom-block">
+                <address>
                     <ul class="list">
-                        <li class="list-title">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li class="list-contacts"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
-                        <li class="list-contacts"><a href="tel:+380961111111" class="link">096 111 11 11</a></li>
+                        <li class="bottom-left-title">г. Киев, пр-т Леси Украинки, 26</li>
+                        <li class="bottom-left-contacts"><a href="mailto:info@example.com" class="link">info@example.com</a></li>
+                        <li class="bottom-left-contacts"><a href="tel:+380961111111" class="link">096 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
-            <div class="links">
-                <p class="bottom-title">Присоединяйтесь</p>
-                <ul class="bottom-icon-list">
-                    <li class="bottom-icon-list-item list">
-                        <a class="icon-link link" href="">
-                            <svg class="item-bottom icon" width="20px" height="20px">
+            <div class="social-net">
+                <p class="social-net-title">Присоединяйтесь</p>
+                <ul class="social-net-list">
+                    <li class="social-net-list-item list">
+                        <a class="social-net-link link" href="">
+                            <svg width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="bottom-icon-list-item list">
-                        <a class="icon-link link" href="">
-                            <svg class="item-bottom icon" width="20px" height="20px">
+                    <li class="social-net-list-item list">
+                        <a class="social-net-link link" href="">
+                            <svg width="20px" height="20px">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="bottom-icon-list-item list">
-                        <a class="icon-link link" href="">
-                            <svg class="item-bottom icon" width="20px" height="20px">
+                    <li class="social-net-list-item list">
+                        <a class="social-net-link link" href="">
+                            <svg width="20px" height="20px">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="bottom-icon-list-item list">
-                        <a class="icon-link link" href="">
-                            <svg class="item-bottom icon" width="20px" height="20px">
+                    <li class="social-net-list-item list">
+                        <a class="social-net-link link" href="">
+                            <svg width="20px" height="20px">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
             </div>
-            <div class="sign">
-                <p class="bottom-title">Подпишитесь на рассылку</p>
-                <form class="form">
-                    <input type="email" name="email" id="email" class="form-input" placeholder=" " />
-                    <label for="email" class="form-label">E-mail</label>
+            <div>
+                <p class="social-net-title">Подпишитесь на рассылку</p>
+                <form class="bottom-form">
+                    <input type="email" name="email" id="email" class="bottom-form-input" placeholder=" " />
+                    <label for="email" class="bottom-form-label">E-mail</label>
             
-                    <button type="submit" class="form-btn">Подписаться
-                        <svg class="form-btn-icon" width="24px" height="24px">
+                    <button type="submit" class="bottom-form-btn">Подписаться
+                        <svg class="bottom-form-btn-icon" width="24px" height="24px">
                             <use href="./images/icons.svg#plane"></use>
                         </svg>
                     </button>
